added : search card , corresponding adapter , integration in fragment_search.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,6 @@
     
     <string name="search_txt_search">Artists,songs, or podcasts</string>
     <string name="search_txt_top_genre">Your top genres</string>
+    <string name="search_txt_popular_genre">Popular podcast categories</string>
+    <string name="search_txt_browse_all">Browse All</string>
 </resources>
