search next fragment and its implementations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,10 +39,11 @@
     <string name="home_btn_podcast">Podcasts</string>
     <string name="home_txt_recently">Recently Played</string>
     <string name="home_txt_try">Try Something Else</string>
-    
-    
+
+
     <string name="search_txt_search">Artists,songs, or podcasts</string>
     <string name="search_txt_top_genre">Your top genres</string>
     <string name="search_txt_popular_genre">Popular podcast categories</string>
     <string name="search_txt_browse_all">Browse All</string>
+    <string name="search_txt_cancel">Cancel</string>
 </resources>
