--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,7 @@
     <string name="search_txt_popular_genre">Popular podcast categories</string>
     <string name="search_txt_browse_all">Browse All</string>
     <string name="search_txt_cancel">Cancel</string>
+
+
+    <string name="library_txt_header">Your Library</string>
 </resources>
