added: playlists from room to UserLibrary fragment  , updated:Track view fragment's navigation , user library layout and functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
 
     <string name="playlist_txt_header">Give your playlist a name</string>
     <string name="playlist_txt_create">Create</string>
+    <string name="playlist_txt_saves">saves</string>
 </resources>
