--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="home_btn_podcast">Podcasts</string>
     <string name="home_txt_recently">Recently Played</string>
     <string name="home_txt_try">Because you love</string>
+    <string name="home_txt_popular">Popular Albums</string>
+    <string name="home_txt_recommended">Recommended Albums</string>
 
 
     <string name="search_txt_search">Artists,songs, or podcasts</string>
