--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="home_txt_new">New Release</string>
 
 
-    <string name="search_txt_search">Artists,songs, or podcasts</string>
+    <string name="search_txt_search">WHAT DO YOU WANT TO LISTEN TO?</string>
     <string name="search_txt_top_genre">Your top genres</string>
     <string name="search_txt_popular_genre">Popular podcast categories</string>
     <string name="search_txt_browse_all">Browse All</string>
