--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,8 @@
     <string name="playlist_txt_header">Give your playlist a name</string>
     <string name="playlist_txt_create">Create</string>
     <string name="playlist_txt_saves">saves</string>
+    <string name="playlist_txt_find">Find in playlist</string>
+    <string name="playlist_txt_remove">Remove from playlist</string>
 
     <string name="bottom_sheet_txt_liked">Add to Liked Songs</string>
     <string name="bottom_sheet_txt_playlist">Add to playlist</string>
