--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,4 +123,6 @@
 
     <string name="sign_snackbar_email">Fill the user credential!</string>
 
+    <string name="txt_remove_playlist">Remove Playlist</string>
+
 </resources>
